[package]
name = "bcv-tray"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.33.0"
tray-icon = "0.20.1"
image = "0.24"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] } # For timestamps
rusqlite = { version = "0.29", features = [
  "bundled",
] } # Bundled for easier setup
imageproc = "0.23"
rusttype = "0.9"
dirs = "5.0" # For finding home directory
rust-embed = "8"
# Optional: Only needed if using the macOS redraw workaround explicitly
#[target.'cfg(target_os = "macos")'.dependencies]
#objc2-core-foundation = "0.1"
scraper = "0.19.0" # Or the latest version

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"   # Abort on panic
